# hwpx-automation

./: .env.example  .gitignore  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  LICENSE  OSS_NOTICES.md  README.md  build.spec  launcher.py  pyproject.toml  requirements.txt  기획안_v1.md
.claude/: settings.json
.claude/hooks/: pre_compact.py  session_start.py
.claude/memory/: README.md  index.md
.claude/skills/: hwpx-verify.md  (+3 more)
bench_results/: perf_20260419_203735.json
docs/: ARCHITECTURE.md  CHECKLIST_DESIGN.md  INSTALL_GUIDE.md  QUANT_DESIGN.md  USAGE.md
installer/: setup.iss
scripts/: bench_backends.py  benchmark.py  build_patch.py  generate_oss_notices.py  gs_cert_readiness.py  load_session_memory.py  make_release.py  publish_firebase.py  save_session_memory.py  sign_release.py  verify_release_zip.py
src/: __init__.py  app.py  cli.py  main.py
templates/: 00_기본_10단계스타일.hwpx  README.md
tests/: conftest.py  test_foundations.py  test_session_memory.py  test_update_installer.py  test_v020_ollama.py  test_v030_openai_anthropic.py  test_v040_self_moa.py  test_v050_quant.py  test_v051_quant_rows.py  test_v060_checklist.py  test_v061_checklist_recursive.py  test_v070_commerce.py  test_v080_hwp_ocr_hints.py  test_v090_tracks.py  test_v100_pro_tier.py  test_v101_noise_filter.py  test_v110_new_features.py  test_v110_property_based.py  test_v120_six_tracks.py  test_v130_new.py  test_v140_new.py  test_v150_final.py  test_w1_smoke.py  test_w2_parser.py  test_w2_pipeline.py  test_w2_template.py  test_w3_api_key.py  test_w3_config.py  test_w3_gemini_resolver.py  test_w4_gui.py
(+84 files in other folders)
